# gridy

./: .gitignore  AsciiScreen.cpp  CMakeLists.txt  Matrix.cpp  NormalScreen.cpp  logs.txt  main.cpp
include/: ActionHandler.h  AsciiScreen.h  Components.h  Connector.h  Enums.h  EventGenerator.h  ExternalInputHandler.h  FeaturePriority.h  Game.h  GameContext.h  GraphMap.h  Matrix.h  Misc.h  NormalScreen.h  PollingStation.h  PositionPrimitives.h  PreviousTests.h  RandomGenerator.h  Systems.h  Things.h  Things_deprecated.h  Utils.h
notes/: misc_notes.txt  misc_outputs.txt
todos/: main_todo.txt
